<resources>
    <string name="app_name">SavanaApp</string>
    <string name="search_hint">Search for products…</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="cart_empty">Your bag is empty</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="category_beauty">Beauty</string>
    <string name="category_tops">Tops</string>
    <string name="category_dresses">Dresses</string>
    <string name="category_bottoms">Bottoms</string>
    <string name="category_bags">Bags</string>
    <string name="category_accessories">Accessories</string>
    <string name="category_activewear">Activewear</string>
    <string name="new_arrivals">NEW ARRIVALS</string>
</resources>